--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,57 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <h1>Millenial's Guide to a Child-less Disney World!</h1>
+    <nav class="menu">
+      <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li>Accommodations</li>
+        <li><a href="page2.html">Sample Days</a></li>
+        <li>Sample Budgets</li>
+        <li>About Me</li>
+        <li>Services and Offerings</li>
+      </ul>
+    </nav>
+
+    <h2>Featured Tour Photos</h2>
+    <img src="Images/FranceEpcot.jpg" width="200" height="200" />
+    <img src="Images/MKCastleFireworks.jpg" width="200" height="200" />
+    <img src="Images/EpcotMonorail.jpg" width="200" height="200" />
+
+    <section>
+    <h2>About Me</h2>
+    <p>
+      Disney World has long been a magical place for those who step through the
+      gates. Sadly, people are passing up on the magic for two main reasons: Too
+      expensive and not having children. I'm here to debunk those outrage
+      thought processes, join the masses and fall back in-love with imagination
+      and possibilities!
+    </p>
+    </section>
+
+    <p>
+      So who am I? A self-described <strong>"Disney Nerd"</strong> with
+      aspirations in supporting Millenials in reclaiming life. 32 years young, I
+      have specialized in all forms of budget friendly vacation planning for the
+      past 10 years.
+      <li>LGBT Friendly</li>
+      <li>Cruising</li>
+      <li>European</li>
+      <li>Road Trips across America</li>
+      <li>Couple's getaways</li>
+      You name it I have planned it!
+    </p>
+
+    <section>
+    <h2>Sample Days</h2>
+      <h3>Off-Peak Season:</h3>
+      <p>
+        <ul>
+          <li>Three-Day Sample</li>
+          <li>Budget around $700 for 2 people</li>
+          <li>On-site hotel accommodations</li>
+        </ul>
+      </p>
+    </section>
   </body>
 </html>
