--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     <nav class="menu">
       <ul>
         <li><a href="index.html">Homepage</a></li>
-        <li>Accommodations</li>
+        <li><a href="page3.html">Accommodations</a></li>
         <li><a href="page2.html">Sample Days</a></li>
         <li>Sample Budgets</li>
-        <li>About Me</li>
+        <li><a href="#AboutMe">About Me</a></li>
         <li>Services and Offerings</li>
       </ul>
     </nav>
@@ -25,7 +25,7 @@
     <img src="Images/MKCastleFireworks.jpg" width="200" height="200" />
     <img src="Images/EpcotMonorail.jpg" width="200" height="200" />
 
-    <section>
+    <section id="AboutMe">
     <h2>About Me</h2>
     <p>
       Disney World has long been a magical place for those who step through the
@@ -34,7 +34,6 @@
       thought processes, join the masses and fall back in-love with imagination
       and possibilities!
     </p>
-    </section>
 
     <p>
       So who am I? A self-described <strong>"Disney Nerd"</strong> with
@@ -48,6 +47,8 @@
       <li>Couple's getaways</li>
       You name it I have planned it!
     </p>
+    </section>
+
 
     <section>
     <h2>Sample Days</h2>
