--- a/public/page3.html
+++ b/public/page3.html
@@ -12,21 +12,38 @@
     <nav class="menu">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="page3.html">Accommodations</a></li>
-        <li>Sample Days</li>
+        <li>Accommodations</li>
+        <li><a href="page2.html">Sample Days</a></li>
         <li>Sample Budgets</li>
         <li><a href="index.html">About Me</a></li>
         <li>Services and Offerings</li>
       </ul>
     </nav>
     <section>
-      <h2>Sample Days</h2>
-        <h3>Off-Peak Season:</h3>
+      <h2>Accommodations</h2>
+        <h3>Off-Peak Season</h3>
         <p>
           <ul>
             <li>Three-Day Sample</li>
-            <li>Budget around $700 for 2 people</li>
+            <li>Budget around $700 for two people</li>
             <li>On-site hotel accommodations</li>
+          </ul>
+        </p>
+
+        <h4>Peak Season</h4>
+        <p>
+          <ul>
+            <li>Three-Day Sample</li>
+            <li>Budget around $1200 for two people</li>
+            <li>On-Site hotel accommodations</li>
+          </ul>
+        </p>
+        
+        <h5>Off-Site Accommodations</h5>
+        <p>
+          <ul>
+            <li>Three-Day Sample</li>
+            <li>Budget around $1200 for two people</li>
           </ul>
         </p>
       </section>
